<resources>
    <string name="app_name">Ap3</string>
    <string name="peso">Peso</string>
    <string name="altura">Altura</string>
    <string name="zeros">0.0</string>
    <string name="imc">IMC</string>
    <string name="calcular">Calcular</string>
    <string name="limpar">Limpar</string>
    <string name="erroPeso">Peso inserido incorretamente</string>
    <string name="erroAltura">Altura inserida incorretamente</string>
</resources>
